# gtest-example

./: CMakeLists.txt  README.md
depends/gtest/googlemock/include/gmock/: gmock-spec-builders.h
depends/gtest/googlemock/include/gmock/internal/: gmock-internal-utils.h
depends/gtest/googletest/include/gtest/: gtest-printers.h  gtest.h
depends/gtest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-port.h
depends/gtest/googletest/src/: gtest-filepath.cc  gtest-internal-inl.h  gtest.cc
libbar/: CMakeLists.txt  bar.cpp  bar.h
libfoo/: CMakeLists.txt  foo.cpp  foo.h
main/: CMakeLists.txt  main.cpp
money/: CMakeLists.txt  employ.cpp  employ.h
test/: CMakeLists.txt
test/testfoo/: CMakeLists.txt  mockbar.h  testMoney.cpp  testMoney.h  testfoo.cpp  testfoo.h
